add s3 integration and get functionality

--- a/aws-backend/ec2/Dockerfile
+++ b/aws-backend/ec2/Dockerfile
@@ -1,8 +1,10 @@
 FROM python:3-alpine
 
-ADD mqtt.py .
+# ADD mqtt.py .
+ADD http_server.py .
 
-RUN pip install paho-mqtt
+# RUN pip install paho-mqtt
 RUN pip install requests
+RUN pip install boto3
 
-CMD ["python", "mqtt.py"]
+CMD ["python", "http_server.py"]
